<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding"
                android:text="@string/wifi_test_isconnected"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/tv_wifi_connected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding"
                android:text="@string/wifi_test_name"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/tv_wifi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding"
                android:text="@string/wifi_test_strength"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/tv_wifi_strength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/test_item_padding" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pass" />

        <Button
            android:id="@+id/fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fail" />
    </LinearLayout>

</LinearLayout>