<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextTitleStyle"
                    android:text="@string/wifi_test_isconnected" />

                <TextView
                    android:id="@+id/tv_wifi_connected"
                    style="@style/itemTextTitleStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextTitleStyle"
                    android:text="@string/wifi_test_name" />

                <TextView
                    android:id="@+id/tv_wifi_name"
                    style="@style/itemTextTitleStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/itemTextTitleStyle"
                    android:text="@string/wifi_test_strength" />

                <TextView
                    android:id="@+id/tv_wifi_strength"
                    style="@style/itemTextTitleStyle" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_button_container"
        layout="@layout/layout_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>