<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:paddingTop="@dimen/test_item_padding"
            android:paddingRight="@dimen/test_item_padding"
            android:paddingBottom="@dimen/test_result_padding"
            android:text="@string/battery_test_charging_status"
            android:textColor="@color/white"
            android:textSize="16pt" />

        <TextView
            android:id="@+id/tv_charging_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:textColor="@color/color_pass_green"
            android:textSize="16pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:paddingTop="@dimen/test_item_padding"
            android:paddingRight="@dimen/test_item_padding"
            android:paddingBottom="@dimen/test_result_padding"
            android:text="@string/battery_test_left_battery"
            android:textColor="@color/white"
            android:textSize="16pt" />

        <TextView
            android:id="@+id/tv_left_battery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:textColor="@color/color_pass_green"
            android:textSize="16pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:paddingTop="@dimen/test_item_padding"
            android:paddingRight="@dimen/test_item_padding"
            android:paddingBottom="@dimen/test_result_padding"
            android:text="@string/battery_test_current_dianliu"
            android:textColor="@color/white"
            android:textSize="16pt" />

        <TextView
            android:id="@+id/tv_current_dianliu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:textColor="@color/color_pass_green"
            android:textSize="16pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:paddingTop="@dimen/test_item_padding"
            android:paddingRight="@dimen/test_item_padding"
            android:paddingBottom="@dimen/test_result_padding"
            android:text="@string/battery_test_current_dianya"
            android:textColor="@color/white"
            android:textSize="16pt" />

        <TextView
            android:id="@+id/tv_current_dianya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:textColor="@color/color_pass_green"
            android:textSize="16pt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:paddingTop="@dimen/test_item_padding"
            android:paddingRight="@dimen/test_item_padding"
            android:paddingBottom="@dimen/test_result_padding"
            android:text="@string/battery_test_temperature"
            android:textColor="@color/white"
            android:textSize="16pt" />

        <TextView
            android:id="@+id/tv_battery_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/test_item_padding"
            android:textColor="@color/color_pass_green"
            android:textSize="16pt" />
    </LinearLayout>

    <include
        android:id="@+id/bottom_button_container"
        layout="@layout/layout_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>

