<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/android_version_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/android_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/kernel_version_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/kernal_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/system_version_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/system_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/device_serial_number_title"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/device_serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:paddingTop="@dimen/test_item_padding"
                android:paddingRight="@dimen/test_item_padding"
                android:paddingBottom="@dimen/test_result_padding"
                android:text="@string/system_test_xitong_time"
                android:textColor="@color/green"
                android:textSize="@dimen/system_test_item_title_test_size" />

            <TextView
                android:id="@+id/tv_system_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/test_item_padding"
                android:textSize="@dimen/test_item_result_text_size" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/bottom_button_container"
        layout="@layout/layout_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>

