<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/LayoutTitleStyle"
        android:text="@string/gravity_sensor_test" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_show_msg"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/itemTextTitleStyle"
            android:text="G-Sensor name:" />

        <TextView
            android:id="@+id/txt_msg_gsensor"
            style="@style/itemTextTitleStyle"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/itemTextTitleStyle"
            android:text="X:" />

        <TextView
            android:id="@+id/txt_msg_gsensor_x"
            style="@style/itemTextTitleStyle"
            android:layout_width="200dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/itemTextTitleStyle"
            android:text="Y:" />

        <TextView
            android:id="@+id/txt_msg_gsensor_y"
            style="@style/itemTextTitleStyle"
            android:layout_width="200dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/itemTextTitleStyle"
            android:text="Z:" />

        <TextView
            android:id="@+id/txt_msg_gsensor_z"
            style="@style/itemTextTitleStyle"
            android:layout_width="200dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="100dip"
        android:visibility="gone">

        <TextView
            android:id="@+id/txt_sensor_arrow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@null" />

        <TextView
            android:id="@+id/txt_sensor_arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@null" />

        <TextView
            android:id="@+id/txt_sensor_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null" />

        <TextView
            android:id="@+id/txt_sensor_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="bottom" >

        <Button
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pass" />

        <Button
            android:id="@+id/fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fail" />
    </LinearLayout>
</LinearLayout>